--- a/_posts/2019-07-10-the-us-narrative-today.html
+++ b/_posts/2019-07-10-the-us-narrative-today.html
@@ -2554,107 +2554,107 @@ stories:
   domain: http://www.csindy.com/
   link: https://www.csindy.com/EventHorizon/archives/2019/07/10/the-laramie-project-at-springs-ensemble-theatre-plus-more-events-to-attend-this-week
 images:
-- name: beach-clouds-lifeguard-beachclouds-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-neo-instinct.jpg
-- name: old-granary-field-oldhouse-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-gred-mash.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-purple-pond.jpg
-- name: machine-road-machine-road-horiz-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-horiz-circuit.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-wols.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-wols.JPG
-- name: berlinwall-DSC-0084-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-dark-rain.jpg
-- name: oldhotel-oldhotel-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-kand-two.jpg
-- name: rockingchair-face-2-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-face-2-blue-granite.jpg
-- name: school-clouds-church-clouds-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-neo-instinct.jpg
-- name: machine-road-machine-road-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-constitution.jpg
-- name: downtown-trucksilo-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-pablo-blue.jpg
-- name: school-clouds-church-clouds-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-purple-pond.jpg
-- name: ellis-island-ellisisland-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-hot-spicy.jpg
-- name: downtown-los-angeles-downtown-la.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la.JPG
-- name: rockingchair-rockingchair-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-purple-storm.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-rainbow-festival.jpg
-- name: downtown-trucksilo-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-internet-numbers.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-neo-instinct.jpg
-- name: miamibeach-miamibeach-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-dry-skin.jpg
-- name: rockingchair-rockingchair-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-post-modern.jpg
-- name: oldhousecars-house-old-cars-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-crafty-painting.jpg
-- name: yosemite-yosemite-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-internet-numbers.jpg
-- name: mosaic-face-mosaic-face-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-crunch-paper.jpg
-- name: bordercrossing-bordercrossing-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-kandinsky-bv.jpg
-- name: curtain-curtain-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-sand-paper.jpg
-- name: oldtrain-oldtrain-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-dali-three.jpg
-- name: docks-docks-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-alien-goggles.jpg
-- name: trucksilo-trucksilo-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-neo-instinct.jpg
-- name: white-house-lawn-white-house-window-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-rainbow-festival.jpg
-- name: border-crossing-bordercrossing-aqua.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-aqua.png
-- name: amusement-park-amusement-park-2-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-internet-numbers.jpg
-- name: legal-statue-legalstatue-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-dali-three.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-rainbow-festival.jpg
-- name: razorwire-DSC-0080-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-crafty-painting.jpg
-- name: razorcliff-razorcliff-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-crunch-paper.jpg
-- name: old-barn-old-barn-1500-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-mucha-mult.jpg
-- name: window-window-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-really-hot.jpg
-- name: paris-paris-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-creativity.jpg
-- name: downtown-trucksilo-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-dali-two.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-far-away.jpg
-- name: cargo-ship-cargo-ship-on-sea-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-deep-connections.jpg
-- name: old-barn-old-barn-1500-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-green-zuma.jpg
-- name: statue-of-liberty-front-view-statueofliberty-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-pablo-blue.jpg
-- name: yuma-bank-yuma-bak-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yuma-bank-yuma-bak-colored-circuits.jpg
-- name: old-school-house-old-schoolhouse-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-far-away.jpg
-- name: fence-fence-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-dali-two.jpg
-- name: locked-up-steam-lock-up-steam-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-marcel-duchamp.jpg
-- name: stories-mosaic-face-blue-circuit-3.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-mosaic-face-blue-circuit-3.jpg
-- name: school-clouds-church-clouds-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-gan-vogh.jpg
-- name: window-window-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-colorful-blocks.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-cinnamon-rolls.jpg
+- name: berlinwall2-berlinwall-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-smoking-cigarette.jpg
+- name: store-on-corner-oldcabin-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-dali-three.jpg
+- name: locked-up-steam-lock-up-steam-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-dark-rain.jpg
+- name: christianity-christianity-under-construction-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-kandinsky-bv.jpg
+- name: old-barn-old-barn-1500-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-kandinsky-bv.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-blue-circuit-4.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-blue-circuit-4.png
+- name: bordercrossing-bordercrossing-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-smoking-cigarette.jpg
+- name: aws-s3-stories-power-lines-empty-space-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-power-lines-empty-space-sunday.jpg
+- name: berlinwall2-berlinwall-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-crunch-paper.jpg
+- name: liberty-back-statue-liberty-back-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-diego-rivera1.jpg
+- name: old-barn-old-barn-1500-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-marcel-duchamp.jpg
+- name: supreme-court-supremecourt-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-mucha-mult.jpg
+- name: udnie-IMG_7559.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_7559.jpg
+- name: oldhousecars-house-old-cars-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-atari-missle.jpg
+- name: losangelescloudyday-los-angeles-downtown-freeway.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/losangelescloudyday-los-angeles-downtown-freeway.jpg
+- name: old-door-lock-old-door-lock-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-creativity.jpg
+- name: miamibeach-miamibeach-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-constitution.jpg
+- name: stories-flower-barbed-wire-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-flower-barbed-wire-clean-view.jpg
+- name: cargo-ship-cargo-ship-on-sea-jap-wav-pr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-jap-wav-pr.jpg
+- name: oldhotel-oldhotel-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-gan-vogh.jpg
+- name: meadowbutterfly-meadow-butterfly-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-clean-view.jpg
+- name: amusement-park-amusement-park-2-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-smoking-cigarette.jpg
+- name: mediterranean-mediterranean-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-constitution.jpg
+- name: liberty-back-statue-liberty-back-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-gan-vogh.jpg
+- name: beach-rocks-beach-rocks-currents-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-ww2-color.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-copper-circuit-2.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-copper-circuit-2.JPG
+- name: old-granary-field-oldhouse-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-post-modern.jpg
+- name: power-lines-power-lines-empty-space-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-diego-rivera1.jpg
+- name: windowmountain-window-mountain-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-atari-missle.jpg
+- name: yosemite-yosemite-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-far-away.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-yellow-paper.jpg
+- name: white-house-whitehouse-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-green-zuma.jpg
+- name: miamibeach-miamibeach-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-deep-connections.jpg
+- name: gypsymosaic-gypsy-eyes-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-marcel-duchamp.jpg
+- name: aws-s3-stories-new-27-93-800-500-0-max-0--5--5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-27-93-800-500-0-max-0--5--5.jpg
+- name: powerlines-power-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-gan-vogh.jpg
+- name: downtown-los-angeles-downtown-la-yellow-paper.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-yellow-paper.JPG
+- name: lincoln-memorial-lincolnmemorial-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-spagetti-accident.jpg
+- name: blossombar-creativity-file-00-00-50-62.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-creativity-file-00-00-50-62.jpg
+- name: old-cabin-oldcabin-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-bright-sand.jpg
+- name: oldtrain-oldtrain-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-dark-rain.jpg
+- name: aws-s3-stories-statue-face-open-mouth-blue-circuit-5.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-statue-face-open-mouth-blue-circuit-5.png
+- name: old-barn-old-barn-1500-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-ww2-dresden.jpg
+- name: catacombs-catacombs-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-diego-rivera1.jpg
+- name: mediterranean-mediterranean.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean.jpg
+- name: containership-containership-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-colorful-dream.jpg
+- name: stories-cargo-ship-on-sea-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-cargo-ship-on-sea-copper-circuit.jpg
+- name: old-cabin-oldcabin-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-umberto-bocc.jpg
+- name: crow-crow-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-oily-mcoilface.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-atari-missle.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-atari-missle.png
+- name: art-museum-art-museum-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-clean-view.jpg
 ---
 Arnold Schwarznegger Will Have Own Snapchat Show.&nbsp;Scientists Say Rising Seas Will Break Flooding Records.&nbsp;'Orange Is The New Black' Leaves Legacy For Women Of Color.&nbsp;Son Begs Dad Not To Call Police On A Black Man.&nbsp;Tiburon's New Morning Cafe Closes Ahead Of Building Demolition.&nbsp;Sturgeon, America's Forgotten Dinosaurs, Slowly Coming Back.&nbsp;No One Injured And Pets Rescued From Red Wing Mobile Home Fire.&nbsp;Budget Board Updated On County Health Insurance Benefits.&nbsp;
